improve saving data + add offline player support - remove folialib - update downloadutil dependencies - fixed offline player support